# BIU-FlightSimulator

./: .gitignore  CMakeLists.txt  MainTrain.cpp  README.md  SimpleAnomalyDetector.cpp  SimpleAnomalyDetector.h  anomaly_detection.cpp  anomaly_detection_util.h  exec  main.cpp  test.cpp  testFile1.csv  timeseries.cpp  timeseries.h  trainFile1.csv
